tests/bonsai/error/bad_path_layout.bonsai
element Float = f32;
element vec3f = vector[Float, 3];

element Triangle {
    p0, p1, p2 : vec3f;
}


element AABB {
    low, high : vec3f;
}

extern triangles : set[Triangle];

schedule {
    tree[[Triangle]] TriangleBVH(low high : vec3f) with AABB(low, high) =
    | Interior(left : TriangleBVH, right : TriangleBVH)
    | Leaf(data : array[Triangle]);

    triangles : TriangleBVH;

    layout triangles {
        pCount : u32;
        prims : array[Triangle, pCount];
        count : u32;
        group[count] index : u32 {
            low : vec3f;
            nPrims : u16;
            axis : u8;
            8; // pad bits.
            high : vec3f;
            switch nPrims {
                0 => Interior { offset : u32; left = index + 1; }; // does not set `right`
                _ => Leaf { pOffset : u32; data = range(prims, pOffset, cast[[u32]](nPrims)); };
            };
        };
    };
}
